# Zero-LLM

./: .gitignore  CMakeLists.txt  LICENSE
.cache/clangd/index/: activation.cpp.732024FD8E2B6120.idx  adam.cpp.49926A283EDC3554.idx  adamw.cpp.89C68F908E56D4AE.idx  allocator.cpp.B959AE6A7FA06541.idx  bpe.cpp.6669385AF5998B17.idx  checkpoint.cpp.CC4872F4D65BC5D6.idx  conv2d.cpp.6B99A66279A3F497.idx  core.cpp.CDC3FDB865436960.idx  cross_entropy_loss.cpp.7934B3115B486760.idx  dataloader.cpp.F7EAB7138984614C.idx  device.cpp.7B9C0279949C61A1.idx  dropout.cpp.DA14222C8A77D859.idx  finetune.cpp.C2ED5F87235A4CA5.idx  flash.cpp.5C54AE8BA4ECCF8F.idx  inference.cpp.7302AD0EFB2F4897.idx  linear.cpp.800207D66CD61688.idx  logger.cpp.A5768EE9A00BE749.idx  model.cpp.CECD961BE77019D0.idx  mse_loss.cpp.7A57F332CF26C5A8.idx  norm.cpp.1942CDA07C6D047B.idx  rotary.cpp.22EE784DC7C2A862.idx  sgd.cpp.1A83E15B5B9055E5.idx  tensor.cpp.45C5F5BC25D41CCC.idx  tensor_ops.cpp.050739C00BFDADFE.idx  test_attention.cpp.6E3B6A99917884A1.idx  test_linear.cpp.FD716EDE869D1984.idx  test_tensor.cpp.A4E9119CC026F627.idx  test_tokenizer.cpp.4F48296F0C6400C0.idx  test_transformer.cpp.E4E5C5F46A4A21A1.idx  tokenizer.cpp.A2E1F23F7518CD40.idx  train.cpp.7A9B06A0B9277B52.idx  train.cpp.96B3C4FD15421BC0.idx  train.cpp.DB30B327F9677F12.idx  transformer.cpp.B894C6AA72E559DF.idx
examples/: CMakeLists.txt
include/core/: device.h  dtype.h  macros.h  tensor.h  tensor_impl.h  tensor_ops.h
include/core/autograd/: engine.h  variable.h
include/core/autograd/function/: base.h
include/core/autograd/function/math/: add.h  matmul.h
include/core/cuda/: elementwise.cuh
include/utils/: logger.h
src/: CMakeLists.txt
src/core/: device.cpp  tensor.cpp  tensor_impl.cpp  tensor_ops.cpp
src/core/autograd/: base.cpp  engine.cpp  variable.cpp
src/core/autograd/function/math/: add.cpp  matmul.cpp
src/core/cuda/: elementwise-add.cu
src/utils/: logger.cpp
tests/: CMakeLists.txt
